# freebsd-ports

Mk/: bsd.gecko.mk  bsd.port.mk
Mk/Uses/: cargo.mk  xorg-cat.mk
devel/ccache/: Makefile
graphics/py-h3/: Makefile
lang/rust/: Makefile  distinfo
lang/rust-bootstrap/: Makefile  distinfo
lang/rust-nightly/: Makefile
math/sage/: Makefile
security/samhain/: Makefile
www/deno/: Makefile
www/deno/files/: patch-cargo-crates_rusty__v8_v8_BUILD.gn
x11-fonts/libFS/: Makefile
x11-toolkits/libXt/: Makefile
x11/libX11/: Makefile
x11/libXScrnSaver/: Makefile
x11/libXext/: Makefile
x11/libXi/: Makefile
x11/libXinerama/: Makefile
x11/libXrandr/: Makefile
x11/libXrender/: Makefile
x11/libXres/: Makefile
x11/libXv/: Makefile
x11/libXvMC/: Makefile
x11/libXxf86dga/: Makefile
x11/libXxf86vm/: Makefile
x11/libdmx/: Makefile
