--- cargo-crates/rusty_v8-0.21.0/v8/BUILD.gn.orig	2021-03-08 23:50:28 UTC
+++ cargo-crates/rusty_v8-0.21.0/v8/BUILD.gn
@@ -3121,6 +3121,7 @@ v8_source_set("v8_base_without_compiler") {
     "src/objects/free-space-inl.h",
     "src/objects/free-space.h",
     "src/objects/function-kind.h",
+    "src/objects/function-syntax-kind.h",
     "src/objects/hash-table-inl.h",
     "src/objects/hash-table.h",
     "src/objects/heap-number-inl.h",
@@ -4438,7 +4439,7 @@ v8_component("v8_libbase") {
     }
   }
 
-  if (is_linux || is_chromeos) {
+  if ((is_linux || is_chromeos) && !is_bsd) {
     sources += [
       "src/base/debug/stack_trace_posix.cc",
       "src/base/platform/platform-linux.cc",
@@ -4448,6 +4449,12 @@ v8_component("v8_libbase") {
       "dl",
       "rt",
     ]
+  } else if (is_bsd) {
+    sources += [
+      "src/base/debug/stack_trace_posix.cc",
+      "src/base/platform/platform-freebsd.cc",
+    ]
+    libs = [ "rt", "execinfo" ]
   } else if (current_os == "aix") {
     sources += [
       "src/base/debug/stack_trace_posix.cc",
@@ -4969,6 +4976,7 @@ if (current_toolchain == v8_snapshot_toolchain) {
       "src/snapshot/mksnapshot.cc",
       "src/snapshot/snapshot-empty.cc",
     ]
+    libs = ["execinfo"]
 
     if (v8_control_flow_integrity) {
       sources += [ "src/deoptimizer/deoptimizer-cfi-empty.cc" ]
